@@ -1,4 +1,8 @@
 2006-08-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
+ src/connection_base.cxx, src/prepared_statement.cxx,
+ src/transaction_base.cxx:
+  - Binary args to prepared statements got truncated at 0! Thanks Lumir Vanek
  test/test091.cxx:
   - Still doesn't work
   - Now throw exception rather than go into infinite recursion
